--- a/1/app/src/main/res/layout/activity_main.xml
+++ b/1/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,6 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/linearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -14,18 +13,33 @@
         android:contentDescription="@string/Description_of_image_1"
         app:srcCompat="@drawable/fibonacci" />
 
-    <Button
-        android:id="@+id/button"
+        <Button
+            android:id="@+id/button"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:text="@string/action_of_button"/>
+
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/action_of_button" />
+        android:layout_height="match_parent">
 
-
-
-        <TextView
-            android:id="@+id/textView"
+        <LinearLayout
+            android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/first_to_numbers_of_Fibonacci" />
+            android:orientation="vertical">
 
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/first_number_of_Fibonacci"/>
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/second_number_of_Fibonacci"/>
+
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
