--- a/1/app/src/main/res/layout/activity_main.xml
+++ b/1/app/src/main/res/layout/activity_main.xml
@@ -13,33 +13,15 @@
         android:contentDescription="@string/Description_of_image_1"
         app:srcCompat="@drawable/fibonacci" />
 
+        <EditText
+            android:id="@+id/edit_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
         <Button
             android:id="@+id/button"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:text="@string/action_of_button"/>
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
-        <LinearLayout
-            android:id="@+id/linearLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/textView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/first_number_of_Fibonacci"/>
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/second_number_of_Fibonacci"/>
-
-        </LinearLayout>
-    </ScrollView>
 </LinearLayout>
