--- a/Taller2/app/src/main/res/layout/activity_maps.xml
+++ b/Taller2/app/src/main/res/layout/activity_maps.xml
@@ -18,6 +18,7 @@
         <EditText
             android:id="@+id/texto"
             android:imeOptions="actionSearch"
+            android:inputType="text"
             android:layout_width="match_parent"
             android:layout_height="47dp"
             android:layout_marginStart="8dp"
